[gd_scene load_steps=4 format=3 uid="uid://convt8kbjvkln"]

[ext_resource type="Script" path="res://main.gd" id="1_ir61v"]
[ext_resource type="Script" path="res://addons/nodewebsockets/websocket_client.gd" id="2_xa2on"]
[ext_resource type="PackedScene" uid="uid://chei1p1yfb286" path="res://scenes/ui.tscn" id="3_1i137"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ir61v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("3_1i137")]

[node name="DebugWebSocketClient" type="Node" parent="."]
script = ExtResource("2_xa2on")

[connection signal="open_overlay" from="CanvasLayer/UI" to="." method="_on_ui_open_overlay"]
[connection signal="update_username" from="CanvasLayer/UI" to="." method="_on_ui_update_username"]
[connection signal="data_received" from="DebugWebSocketClient" to="." method="_on_web_socket_client_data_received"]
